<?xml version="1.0"?>
<package format="2">
  <name>ros_image_pan_zoom_viewer_qt</name>
  <version>1.0.0</version>
  <description>
    A ROS1 image viewer with pan and zoom support, built with Qt5.
    Subscribes to a ROS image topic and displays it in a resizable Qt window.
    Supports mouse wheel zoom (pixel-level), arbitrary drag panning,
    fit-to-window / actual-size modes, crosshair overlay, screenshot saving,
    and depth / mono-channel pseudo-color visualization.
  </description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
